#747: Fixed drop-down menu from cutting off on right side on hovering in Firefox. Reported by 123s.

--- a/style/Fire.css
+++ b/style/Fire.css
@@ -22,6 +22,7 @@ html, body, .pun table, .pun div, .pun form, .pun p, .pun h1, .pun h2, .pun h3, 
 .pun select {
 	padding-bottom: 1px;
 	padding-top: 1px;
+	padding-right: 1px;
 }
 
 /* Content Defaults
